kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: node-deployment
  labels:
    app: node-app
spec:
  selector:
    matchLabels:
      app: node-app
  template:
    metadata:
      name: node-app-pod
      labels:
        app: node-app
    spec:
      containers:
      - name: node-container
        image: 851725308161.dkr.ecr.us-west-1.amazonaws.com/dev/nodeapp:latest
        ports:
        - containerPort: 5100
